// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`quoted-keys.js - {"quoteProps":"consistent"} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
quoteProps: "consistent"
                                                      printWidth: 80 (default) |
=====================================input======================================
import json1 from './mod.js' with { "type":"json" };
import json2 from './mod.js' with { "foobar":"json" };
import json3 from './mod.js' with { "type-foo" :"json" };
import json4 from './mod.js' with { "333foo" :"json" };
import json5 from './mod.js' with { "0" :"json" };
import json6 from './mod.js' with { "0n" :"json" };
import json7 from './mod.js' with { "33333" :"json" };
import json8 from './mod.js' with { "33333n" :"json" };
import json9 from './mod.js' with { "33333b" :"json" };
import json10 from './mod.js' with { "03333" :"json" };

=====================================output=====================================
import json1 from "./mod.js" with { type: "json" };
import json2 from "./mod.js" with { foobar: "json" };
import json3 from "./mod.js" with { "type-foo": "json" };
import json4 from "./mod.js" with { "333foo": "json" };
import json5 from "./mod.js" with { "0": "json" };
import json6 from "./mod.js" with { "0n": "json" };
import json7 from "./mod.js" with { "33333": "json" };
import json8 from "./mod.js" with { "33333n": "json" };
import json9 from "./mod.js" with { "33333b": "json" };
import json10 from "./mod.js" with { "03333": "json" };

================================================================================
`;

exports[`quoted-keys.js - {"quoteProps":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
quoteProps: "preserve"
                                                      printWidth: 80 (default) |
=====================================input======================================
import json1 from './mod.js' with { "type":"json" };
import json2 from './mod.js' with { "foobar":"json" };
import json3 from './mod.js' with { "type-foo" :"json" };
import json4 from './mod.js' with { "333foo" :"json" };
import json5 from './mod.js' with { "0" :"json" };
import json6 from './mod.js' with { "0n" :"json" };
import json7 from './mod.js' with { "33333" :"json" };
import json8 from './mod.js' with { "33333n" :"json" };
import json9 from './mod.js' with { "33333b" :"json" };
import json10 from './mod.js' with { "03333" :"json" };

=====================================output=====================================
import json1 from "./mod.js" with { "type": "json" };
import json2 from "./mod.js" with { "foobar": "json" };
import json3 from "./mod.js" with { "type-foo": "json" };
import json4 from "./mod.js" with { "333foo": "json" };
import json5 from "./mod.js" with { "0": "json" };
import json6 from "./mod.js" with { "0n": "json" };
import json7 from "./mod.js" with { "33333": "json" };
import json8 from "./mod.js" with { "33333n": "json" };
import json9 from "./mod.js" with { "33333b": "json" };
import json10 from "./mod.js" with { "03333": "json" };

================================================================================
`;

exports[`quoted-keys.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import json1 from './mod.js' with { "type":"json" };
import json2 from './mod.js' with { "foobar":"json" };
import json3 from './mod.js' with { "type-foo" :"json" };
import json4 from './mod.js' with { "333foo" :"json" };
import json5 from './mod.js' with { "0" :"json" };
import json6 from './mod.js' with { "0n" :"json" };
import json7 from './mod.js' with { "33333" :"json" };
import json8 from './mod.js' with { "33333n" :"json" };
import json9 from './mod.js' with { "33333b" :"json" };
import json10 from './mod.js' with { "03333" :"json" };

=====================================output=====================================
import json1 from "./mod.js" with { type: "json" };
import json2 from "./mod.js" with { foobar: "json" };
import json3 from "./mod.js" with { "type-foo": "json" };
import json4 from "./mod.js" with { "333foo": "json" };
import json5 from "./mod.js" with { "0": "json" };
import json6 from "./mod.js" with { "0n": "json" };
import json7 from "./mod.js" with { "33333": "json" };
import json8 from "./mod.js" with { "33333n": "json" };
import json9 from "./mod.js" with { "33333b": "json" };
import json10 from "./mod.js" with { "03333": "json" };

================================================================================
`;
